# python-sc4net

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  coverage_output.txt  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  qa.yml
docs/: conf.py  contribute.rst  getting-started.rst  index.rst  modules.rst
sc4net/: __init__.py
tests/: mocks.py  test_invalid_scheme.py  test_mock_http_server_errors.py  test_net_sync.py
tests/assets/: IMPORT_201711.txt
